Sync installed modules, update readme & swager doc
